// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders default if no override 1`] = `
<div
  className="grid one-whole text-left flush"
>
  <div
    className="grid__item three-quarters text-left hard"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <h3
      className="flush-bottom"
    >
      Review Contribution
    </h3>
  </div>
  <div
    className="grid__item one-quarter text-right"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <button
      className="
        btn btn--small@next
        
        btn--dark-secondary flush-bottom
      "
      disabled={undefined}
      onClick={undefined}
      style={Object {}}
    >
      Edit
    </button>
  </div>
</div>
`;

exports[`Header renders override if override 1`] = `
<span>
  hey
</span>
`;

exports[`TransactionLayout should render with a schedule props 1`] = `
<div>
  <div
    className="push-double-top@lap-and-up push"
  >
    <span>
      header
    </span>
  </div>
  <div
    className="soft-sides"
  >
    <div
      className="one-whole push-bottom"
    />
    <div
      className="outlined--light outlined--bottom soft-half-top"
      style={
        Object {
          "borderWidth": "1px",
        }
      }
    >
      <div
        className="soft-half-ends hard-sides"
      >
        <div
          className="grid"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <div
            className="grid__item one-half"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <h5
              className="text-dark-primary flush text-left"
            >
              123
            </h5>
          </div>
          <div
            className="grid__item one-half text-right"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <div
              className="floating text-dark-primary text-left display-inline-block"
            >
              <h6
                className="floating__item flush"
                style={
                  Object {
                    "paddingRight": "5px",
                  }
                }
              >
                $
              </h6>
              <h4
                className="floating__item flush"
                style={undefined}
              >
                5
              </h4>
              <h6
                className="floating__item flush"
              >
                .
                00
              </h6>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="outlined--light outlined--bottom soft-half-top"
      style={
        Object {
          "borderWidth": "1px",
        }
      }
    >
      <div
        className="soft-half-ends hard-sides"
      >
        <div
          className="grid"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <div
            className="grid__item one-half"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <h5
              className="text-dark-primary flush text-left"
            >
              234
            </h5>
          </div>
          <div
            className="grid__item one-half text-right"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <div
              className="floating text-dark-primary text-left display-inline-block"
            >
              <h6
                className="floating__item flush"
                style={
                  Object {
                    "paddingRight": "5px",
                  }
                }
              >
                $
              </h6>
              <h4
                className="floating__item flush"
                style={undefined}
              >
                7
              </h4>
              <h6
                className="floating__item flush"
              >
                .
                00
              </h6>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="text-left soft-top outlined--bottom outlined--light soft-bottom"
      style={
        Object {
          "borderWidth": "1px",
        }
      }
    >
      <h5
        className="text-dark-primary"
      >
        Schedule details
      </h5>
      <div
        className="soft-half-bottom"
      >
        <h7
          className="text-dark-tertiary"
        >
          Frequency:
        </h7>
        <p
          className="display-inline-block soft-half-left flush"
        >
          <em>
            <small />
          </em>
        </p>
      </div>
      <div>
        <h7
          className="text-dark-tertiary"
        >
          Starting:
        </h7>
        <p
          className="display-inline-block soft-half-left flush"
        >
          <em>
            <small>
              now formatted as MMM D, YYYY
            </small>
          </em>
        </p>
      </div>
    </div>
    <div
      className="soft-half-ends push-bottom hard-sides outlined--light outlined--bottom"
      style={
        Object {
          "borderWidth": "1px",
        }
      }
    >
      <div
        className="grid"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        <div
          className="grid__item one-quarter"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <h5
            className="text-dark-secondary flush text-left"
          >
            Total
          </h5>
        </div>
        <div
          className="grid__item three-quarters text-right"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <div
            className="display-inline-block"
          >
            <div
              className="floating text-dark-primary text-left"
            >
              <h4
                className="floating__item flush"
                style={
                  Object {
                    "paddingRight": "5px",
                  }
                }
              >
                $
              </h4>
              <h2
                className="floating__item flush"
                style={undefined}
              >
                12
              </h2>
              <h4
                className="floating__item flush"
              >
                .
                00
              </h4>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="one-whole soft-half-top"
    />
    <button
      className="btn soft-half-top one-whole"
      type="submit"
    >
      <span>
        Schedule With 6789
      </span>
         
      <div
        className="background--fill display-inline-block"
        style={
          Object {
            "backgroundImage": "url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAA8CAYAAADxJz2MAAAABGdBTUEAALGPC/xhBQAAAc9JREFUeAHt3DFOwzAUxnGcROoMEx04Q4/AoSraoXMWqp4DjgFH4AwgdWvnDlV4FoyOn+xPlVrlnwEJ+32h/eWlcqjkcGfHbrd7Op1Or8MwPNuv8zjGMSqwDyF8tG27Wq/XP+Ef78vw7kcjTKQEDl3XLRrrvC14KR937OF8Pm8bK4u3LUeFQPzIa+zHY0WWyJ/APHYghyDQjWU3m00Ym5vieN/3Q+p904EplYIxAAuwUqUAplQKxgAswEqVAphSKRgDsAArVQpgSqVgDMACrFQpgCmVgrHRJxHvHGMrcy93rfO1T150oHhFAQRQFBDjdCCAooAYpwMBFAXEePU6sHbdJL7eq4tzC4uXBEAARQExTgcCKAqIcToQQFFAjNOBAIoCYrz6SeTS/5G+lScdbmGxAwEEUBQQ43QggKKAGKcDARQFxHj1OvBW1mmijxvnFnaJ8gUA5n3cWQBdonwBgHkfdxZAlyhfAGDex50F0CXKFwCY93FnAXSJ8gUA5n3cWQBdonxBuPR3G/k/f/uzdKB4DSPgXjzHlOP7xjaR+ZyygPLeo11jO/C82EkOyommmDW842w2WzVx+6K4A48NvBkEt7PfDXHrp3fDWyyXy+9ftplH0FR79EYAAAAASUVORK5CYII=')",
            "borderRadius": "3px",
            "height": "21px",
            "position": "inherit",
            "top": "3px",
            "width": "30px",
          }
        }
      />
    </button>
    <div
      className="display-block soft-half-top text-center"
    >
      <h6
        className="outlined--light outlined--bottom display-inline-block text-dark-tertiary"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        Change Payment Accounts
      </h6>
    </div>
  </div>
</div>
`;

exports[`TransactionLayout should render with props 1`] = `
<div>
  <div
    className="push-double-top@lap-and-up push"
  >
    <span>
      header
    </span>
  </div>
  <div
    className="soft-sides"
  >
    <div
      className="one-whole push-bottom"
    />
    <div
      className="outlined--light outlined--bottom soft-half-top"
      style={
        Object {
          "borderWidth": "1px",
        }
      }
    >
      <div
        className="soft-half-ends hard-sides"
      >
        <div
          className="grid"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <div
            className="grid__item one-half"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <h5
              className="text-dark-primary flush text-left"
            >
              123
            </h5>
          </div>
          <div
            className="grid__item one-half text-right"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <div
              className="floating text-dark-primary text-left display-inline-block"
            >
              <h6
                className="floating__item flush"
                style={
                  Object {
                    "paddingRight": "5px",
                  }
                }
              >
                $
              </h6>
              <h4
                className="floating__item flush"
                style={undefined}
              >
                5
              </h4>
              <h6
                className="floating__item flush"
              >
                .
                00
              </h6>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="outlined--light outlined--bottom soft-half-top"
      style={
        Object {
          "borderWidth": "1px",
        }
      }
    >
      <div
        className="soft-half-ends hard-sides"
      >
        <div
          className="grid"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <div
            className="grid__item one-half"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <h5
              className="text-dark-primary flush text-left"
            >
              234
            </h5>
          </div>
          <div
            className="grid__item one-half text-right"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <div
              className="floating text-dark-primary text-left display-inline-block"
            >
              <h6
                className="floating__item flush"
                style={
                  Object {
                    "paddingRight": "5px",
                  }
                }
              >
                $
              </h6>
              <h4
                className="floating__item flush"
                style={undefined}
              >
                7
              </h4>
              <h6
                className="floating__item flush"
              >
                .
                00
              </h6>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half-ends push-bottom hard-sides outlined--light outlined--bottom"
      style={
        Object {
          "borderWidth": "1px",
        }
      }
    >
      <div
        className="grid"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        <div
          className="grid__item one-quarter"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <h5
            className="text-dark-secondary flush text-left"
          >
            Total
          </h5>
        </div>
        <div
          className="grid__item three-quarters text-right"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <div
            className="display-inline-block"
          >
            <div
              className="floating text-dark-primary text-left"
            >
              <h4
                className="floating__item flush"
                style={
                  Object {
                    "paddingRight": "5px",
                  }
                }
              >
                $
              </h4>
              <h2
                className="floating__item flush"
                style={undefined}
              >
                12
              </h2>
              <h4
                className="floating__item flush"
              >
                .
                00
              </h4>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="one-whole soft-half-top"
    />
    <button
      className="btn soft-half-top one-whole"
      type="submit"
    >
      <span>
        Give With 6789
      </span>
         
      <div
        className="background--fill display-inline-block"
        style={
          Object {
            "backgroundImage": "url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAA8CAYAAADxJz2MAAAABGdBTUEAALGPC/xhBQAAAc9JREFUeAHt3DFOwzAUxnGcROoMEx04Q4/AoSraoXMWqp4DjgFH4AwgdWvnDlV4FoyOn+xPlVrlnwEJ+32h/eWlcqjkcGfHbrd7Op1Or8MwPNuv8zjGMSqwDyF8tG27Wq/XP+Ef78vw7kcjTKQEDl3XLRrrvC14KR937OF8Pm8bK4u3LUeFQPzIa+zHY0WWyJ/APHYghyDQjWU3m00Ym5vieN/3Q+p904EplYIxAAuwUqUAplQKxgAswEqVAphSKRgDsAArVQpgSqVgDMACrFQpgCmVgrHRJxHvHGMrcy93rfO1T150oHhFAQRQFBDjdCCAooAYpwMBFAXEePU6sHbdJL7eq4tzC4uXBEAARQExTgcCKAqIcToQQFFAjNOBAIoCYrz6SeTS/5G+lScdbmGxAwEEUBQQ43QggKKAGKcDARQFxHj1OvBW1mmijxvnFnaJ8gUA5n3cWQBdonwBgHkfdxZAlyhfAGDex50F0CXKFwCY93FnAXSJ8gUA5n3cWQBdonxBuPR3G/k/f/uzdKB4DSPgXjzHlOP7xjaR+ZyygPLeo11jO/C82EkOyommmDW842w2WzVx+6K4A48NvBkEt7PfDXHrp3fDWyyXy+9ftplH0FR79EYAAAAASUVORK5CYII=')",
            "borderRadius": "3px",
            "height": "21px",
            "position": "inherit",
            "top": "3px",
            "width": "30px",
          }
        }
      />
    </button>
    <div
      className="display-block soft-half-top text-center"
    >
      <h6
        className="outlined--light outlined--bottom display-inline-block text-dark-tertiary"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        Change Payment Accounts
      </h6>
    </div>
  </div>
</div>
`;
